--- a/src/app/module/auth/login/login.component.html
+++ b/src/app/module/auth/login/login.component.html
@@ -1,1 +1,46 @@
-<p>login works!</p>
+
+
+<div class="login">
+    <div class="login-content">
+        <div class="content-form">
+            <div class="wrapper">
+                <div class="form-image">
+                    <img src="./assets/images/logo.png" alt="logo_navega" title="Navega">
+                </div>
+                <div class="form-title">
+                    <h2>Boas-vindas ao Portal! <br>
+                        Para começar, qual seu email ou CPF?</h2>
+                </div>
+                <div class="form-text">
+                    <p>Precisamos desta confirmação para dar <br>
+                        início ao seu acesso.</p>
+                </div>
+                <div class="form">
+                    <form>
+                        <app-custom-input titulo="Email ou CPF" icone="check_circle" type="text"></app-custom-input>
+                        <app-custom-input-password titulo="Senha" type="password"></app-custom-input-password>
+                        <div class="button-template">
+                            <app-custom-button type="submit" titulo="Acessar"></app-custom-button>
+                        </div>
+                    </form>
+                </div>
+                <div class="forgot-password">
+                    <p>Esqueceu a senha? <a>Acesse aqui</a></p>
+                </div>
+                <div class="version">
+                    <span>Versão 0.01</span>
+                </div>
+            </div>
+        </div>
+        <div class="content-image" style="background-image: url('./assets/images/navega_background_login.png')">
+            <div class="image-dashboard">
+                <img src="./assets/images/navega_dashboard.png" alt="navega_dashboard" title="Navega Dashboard">
+            </div>
+            <div class="image-title">
+                <h2>Bem-vindo a seu novo Dashboard</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
+
