--- a/src/styles.less
+++ b/src/styles.less
@@ -4,7 +4,13 @@ html, body { height: 100%; }
 
 body { margin: 0; font-family: "Poppins", sans-serif; }
 
-mat-form-field {
+mat-form-field, .mat-list-item {
     font-family: "Poppins", sans-serif !important;
 }
 
+.container {
+    width: 100%;
+    max-width: 1200px; 
+    margin: 0 auto;   
+    padding: 0 15px;   
+}
