pagina de recuperação de senha com organização de painel dashboard

--- a/src/app/module/auth/login/login.component.html
+++ b/src/app/module/auth/login/login.component.html
@@ -25,21 +25,14 @@
                     </form>
                 </div>
                 <div class="forgot-password">
-                    <p>Esqueceu a senha? <a>Acesse aqui</a></p>
+                    <p>Esqueceu a senha? <a routerLink="/forgot-password">Acesse aqui</a></p>
                 </div>
                 <div class="version">
                     <span>Versão 0.01</span>
                 </div>
             </div>
         </div>
-        <div class="content-image" style="background-image: url('./assets/images/navega_background_login.png')">
-            <div class="image-dashboard">
-                <img src="./assets/images/navega_dashboard.png" alt="navega_dashboard" title="Navega Dashboard">
-            </div>
-            <div class="image-title">
-                <h2>Bem-vindo a seu novo Dashboard</h2>
-            </div>
-        </div>
+        <app-partial-background></app-partial-background>
     </div>
 </div>
 
