--- a/src/app/module/auth/forgot-password/forgot-password.component.html
+++ b/src/app/module/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,39 @@
-<p>forgot-password works!</p>
+
+<div class="forgot">
+    <div class="forgot-content">
+        <div class="content-form">
+            <div class="wrapper">
+                <div class="form-image">
+                    <img src="./assets/images/logo.png" alt="logo_navega" title="Navega">
+                </div>
+                <div class="form-title">
+                    <h2>Esqueceu sua senha? <br>
+                        Não se preocupe, iremos te ajudar!</h2>
+                </div>
+                <div class="form-text">
+                    <p>Preencha os campos necessários para <br>
+                    continuar com a recuperação de senha</p>
+                </div>
+                <div class="form">
+                    <form>
+                        <app-custom-input titulo="Email ou CPF" icone="check_circle" type="text"></app-custom-input>
+                        <div class="button-template">
+                            <app-custom-button titulo="Redefinir senha" (click)="openModal()"></app-custom-button>
+                        </div>
+                    </form>
+                </div>
+                <div class="login">
+                    <p>Já é cadastrado? <a routerLink="/login">Faça login aqui</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="content-image" style="background-image: url('./assets/images/navega_background_login.png')">
+            <div class="image-dashboard">
+                <img src="./assets/images/navega_dashboard.png" alt="navega_dashboard" title="Navega Dashboard">
+            </div>
+            <div class="image-title">
+                <h2>Bem-vindo a seu novo Dashboard</h2>
+            </div>
+        </div>
+    </div>
+</div>
