--- a/src/app/module/auth/forgot-password/forgot-password.component.less
+++ b/src/app/module/auth/forgot-password/forgot-password.component.less
@@ -75,3 +75,18 @@
 .forgot .forgot-content .content-form .login p a:hover{
     text-decoration: underline;
 }
+
+.forgot .forgot-content .content-partial{
+    width: 70%;
+}
+
+@media (max-width: 768px) {
+
+    .forgot .forgot-content .content-form{
+        width: 100%;
+    }
+
+    .forgot .forgot-content .content-partial{
+        display: none;
+    }
+}
