--- a/src/app/module/auth/login/login.component.html
+++ b/src/app/module/auth/login/login.component.html
@@ -32,7 +32,9 @@
                 </div>
             </div>
         </div>
-        <app-partial-background></app-partial-background>
+        <div class="content-partial">
+            <app-partial-background></app-partial-background>
+        </div>
     </div>
 </div>
 
