--- a/src/app/module/auth/login/login.component.less
+++ b/src/app/module/auth/login/login.component.less
@@ -82,33 +82,9 @@
     line-height: 15px;
 }
 
-.login .login-content .content-image{
-    height: 100vh;
+.login .login-content .content-partial{
     width: 70%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex;
 }
-
-.login .login-content .content-image .image-dashboard img{
-    max-width: 100%;
-    height: auto;
-}
-
-.login .login-content .content-image .image-title h2{
-    color: #fff;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 25.6px;
-    font-family: "Montserrat", sans-serif;
-}
-
 
 @media (max-width: 768px) {
 
@@ -116,7 +92,7 @@
         width: 100%;
     }
 
-    .login .login-content .content-image{
+    .login .login-content .content-partial{
         display: none;
     }
 }
