--- a/src/app/componentes/custom-sidenav/custom-sidenav.component.less
+++ b/src/app/componentes/custom-sidenav/custom-sidenav.component.less
@@ -51,7 +51,7 @@ mat-nav-list mat-list-item a img{
 }
 
 ::ng-deep.mat-list-item-content{
-    padding: 10px 0 !important; 
+    padding: 10px 5px !important; 
 }
 
 .mat-list-item:hover {
