--- a/src/app/module/aplication/aplication.component.html
+++ b/src/app/module/aplication/aplication.component.html
@@ -1,14 +1,5 @@
-<!-- <div class="app-header" >
- 
-</div>
-<div class="container">
-    <app-custom-sidenav></app-custom-sidenav>
-</div>
 
-<div class="content" [ngClass]="isSidebarVisible ? 'with-sidebar' : 'without-sidebar'">
-    <router-outlet></router-outlet>
-</div> -->
-
+<app-header></app-header>
 <mat-toolbar>
     <div class="toolbar container">
         <button (click)="toggleDrawer()">
@@ -21,7 +12,7 @@
     <mat-drawer #drawer mode="side" [opened]="drawerOpened" class="menu">
         <app-custom-sidenav></app-custom-sidenav>
     </mat-drawer>
-    <mat-drawer-content class="main container" [ngClass]="isSidebarVisible ? 'with-sidebar' : 'without-sidebar'">
+    <mat-drawer-content class="main" [ngClass]="isSidebarVisible ? 'with-sidebar' : 'without-sidebar'">
         <router-outlet></router-outlet>
     </mat-drawer-content>
 </mat-drawer-container>
