--- a/src/app/module/auth/forgot-password/forgot-password.component.html
+++ b/src/app/module/auth/forgot-password/forgot-password.component.html
@@ -18,7 +18,7 @@
                     <form>
                         <app-custom-input titulo="Email ou CPF" icone="check_circle" type="text"></app-custom-input>
                         <div class="button-template">
-                            <app-custom-button titulo="Redefinir senha" (click)="openModal()"></app-custom-button>
+                            <app-custom-button titulo="Redefinir senha" type="button" (click)="openModal($event)"></app-custom-button>
                         </div>
                     </form>
                 </div>
@@ -27,13 +27,8 @@
                 </div>
             </div>
         </div>
-        <div class="content-image" style="background-image: url('./assets/images/navega_background_login.png')">
-            <div class="image-dashboard">
-                <img src="./assets/images/navega_dashboard.png" alt="navega_dashboard" title="Navega Dashboard">
-            </div>
-            <div class="image-title">
-                <h2>Bem-vindo a seu novo Dashboard</h2>
-            </div>
+        <div class="content-partial">
+            <app-partial-background></app-partial-background>
         </div>
     </div>
 </div>
