--- a/src/styles.less
+++ b/src/styles.less
@@ -14,3 +14,11 @@ mat-form-field, .mat-list-item {
     margin: 0 auto;   
     padding: 0 15px;   
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 300,
+  'GRAD' 0,
+  'opsz' 24
+}
