contribuição mensal primeira parte

--- a/src/app/componentes/custom-sidenav/custom-sidenav.component.less
+++ b/src/app/componentes/custom-sidenav/custom-sidenav.component.less
@@ -45,6 +45,10 @@ mat-nav-list mat-list-item a img{
     filter: invert(35%) sepia(100%) saturate(100%) hue-rotate(180deg) brightness(90%) contrast(90%);
 }
 
+mat-nav-list mat-list-item a.active{
+    color: #1AAAB2;
+}
+
 .mat-list-item{
     transition: 0.3s;
     padding: 6px 0px !important;
