--- a/src/app/module/aplication/monthly-contribution/monthly-contribution.component.html
+++ b/src/app/module/aplication/monthly-contribution/monthly-contribution.component.html
@@ -22,4 +22,7 @@
         <button>alterar contribuição</button>
       </div>
     </mat-expansion-panel>
+    <div class="action-contributon">
+      <button>incluir contribuição</button>
+    </div>
 </mat-accordion>
