--- a/src/styles.less
+++ b/src/styles.less
@@ -4,7 +4,7 @@ html, body { height: 100%; }
 
 body { margin: 0; font-family: "Poppins", sans-serif; }
 
-mat-form-field, .mat-list-item, .mat-expansion-panel-header, .mat-expansion-panel-content {
+mat-form-field, .mat-list-item, .mat-expansion-panel-header, .mat-expansion-panel-content, .mat-table{
     font-family: "Poppins", sans-serif !important;
 }
 
