--- a/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
+++ b/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
@@ -20,9 +20,13 @@
     vertical-align: middle;
 }
 
-::ng-deep .mat-content{
-    border-bottom: 1px solid #BDBDBD;
-    padding: 0 0 10px 0;
+::ng-deep .mat-expansion-panel-header.mat-expanded{
+    height: 45px;
+}
+
+.content{
+    border-top: 1px solid #BDBDBD;
+    padding: 10px 0 0 0;
 }
 
 .content .line{
@@ -65,6 +69,23 @@
 
 .action button:hover{
     text-decoration: underline;
+}
+
+.action-contributon {
+    text-align: center;
+    margin: 15px 0 0 0;
+}
+
+.action-contributon button{
+    color: #fff;
+    background-color: #1AAAB2;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: 5px;
+    border: 1px solid #1AAAB2;
+    padding: 12px 35px;
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
