pagina de extrato com componentização de acordion

--- a/src/app/module/aplication/extract/extract.component.html
+++ b/src/app/module/aplication/extract/extract.component.html
@@ -1,17 +1,1 @@
-<table mat-table [dataSource]="dataSource">
-
-    <ng-container matColumnDef="extrato">
-      <th mat-header-cell *matHeaderCellDef> Extrato </th>
-      <td mat-cell *matCellDef="let element"> {{element.extrato}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="data">
-      <th mat-header-cell *matHeaderCellDef> Data </th>
-      <td mat-cell *matCellDef="let element"> {{element.data}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-  
-  
+<app-custom-acordion-extract [items]="mockData"></app-custom-acordion-extract>
