--- a/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
+++ b/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
@@ -20,6 +20,10 @@
     vertical-align: middle;
 }
 
+mat-expansion-panel{
+    margin-bottom: 10px;
+}
+
 ::ng-deep .mat-expansion-panel-header.mat-expanded{
     height: 45px;
 }
