--- a/src/app/componentes/custom-acordion-extract/custom-acordion-extract.component.less
+++ b/src/app/componentes/custom-acordion-extract/custom-acordion-extract.component.less
@@ -19,6 +19,7 @@ mat-panel-title{
 
 mat-panel-title b{
     font-weight: 500;
+    color: #464646;
 }
 
 mat-expansion-panel{
@@ -27,6 +28,7 @@ mat-expansion-panel{
 
 .content b{
     font-weight: 500;
+    color: #464646;
 }
 
 .content {
