--- a/src/app/module/aplication/information/information.component.html
+++ b/src/app/module/aplication/information/information.component.html
@@ -1,8 +1,2 @@
-<div class="info">
-    <div class="container">
-        <mat-icon>
-            info
-        </mat-icon>
-        <h2>Não há informações disponíveis.</h2>
-    </div>
-</div>
+
+<app-custom-information titulo="Não há informações disponíveis." icone="info"></app-custom-information>
