--- a/src/app/componentes/custom-sidenav/custom-sidenav.component.html
+++ b/src/app/componentes/custom-sidenav/custom-sidenav.component.html
@@ -11,7 +11,7 @@
 </div>
 <mat-nav-list>
     <mat-list-item mat-list-item *ngFor="let item of menuItems">
-        <a [routerLink]="item.route" routerLinkActive="active" [class.active]="isActive(item.route)">
+        <a [routerLink]="item.route" routerLinkActive="active" [class.active]="isActive(item.route)" (click)="onRouteClick(item.label)">
             <img [src]="item.iconUrl" alt="{{ item.label }}" class="menu-icon" />
             {{ item.label }}
             <mat-icon>navigate_next</mat-icon>
