--- a/src/app/module/aplication/monthly-contribution/monthly-contribution.component.html
+++ b/src/app/module/aplication/monthly-contribution/monthly-contribution.component.html
@@ -1,4 +1,26 @@
 
+<div class="graph">
+  <div class="graph-content">
+    <div id="graph"></div>
+  </div>
+</div>
+
+<div class="legenda">
+  <div class="item">
+    <div class="circulo" style="background-color: #594CBE;"></div>
+    <div class="descricao">
+      <strong>Contribuição Mensal</strong><br/>
+      R$ 499.999,99
+    </div>
+  </div>
+  <div class="item">
+    <div class="circulo" style="background-color: #E22E6F;"></div>
+    <div class="descricao">
+      <strong>Contribuição Voluntária</strong><br/>
+      R$ 499.999,99
+    </div>
+  </div>
+</div>
 <mat-accordion>
     <mat-expansion-panel expanded="true" *ngFor="let contribution of contributions">
       <mat-expansion-panel-header>
