--- a/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
+++ b/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
@@ -92,6 +92,42 @@ mat-expansion-panel{
     cursor: pointer;
 }
 
+.graph{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+  #graph {
+    width: 200px;
+    height: 200px;
+  }
+  
+  .legenda {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .item {
+    display: flex;
+    align-items: center;
+    margin: 0 20px;
+  }
+  
+  .circulo {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .descricao {
+    font-size: 16px;
+  }
+  
+
 @media (max-width: 768px) {
     .action{
         text-align: center;
