--- a/src/app/componentes/custom-button/custom-button.component.less
+++ b/src/app/componentes/custom-button/custom-button.component.less
@@ -17,3 +17,17 @@ button:hover{
     background-color: rgba(26, 170, 178, 0.8);
     border: 1px solid rgba(26, 170, 178, 0.8);
 }
+
+.custom-default{
+    background-color: transparent;
+    border: none;
+    color: #1AAAB2;
+    transition: 0.3s;
+    width: initial;
+}
+
+.custom-default:hover{
+    background-color: transparent;
+    border: none;
+    text-decoration: underline;
+}
