--- a/src/app/componentes/custom-sidenav/custom-sidenav.component.less
+++ b/src/app/componentes/custom-sidenav/custom-sidenav.component.less
@@ -24,6 +24,7 @@
 
 mat-nav-list mat-list-item {
     border-bottom: 1px solid #BDBDBD;
+    cursor: initial;
 }
 
 mat-nav-list mat-list-item a{
@@ -59,6 +60,10 @@ mat-nav-list mat-list-item a.active{
 }
 
 .mat-list-item:hover {
+    background-color: transparent !important;
+}
+
+.mat-list-item a:hover {
     background-color: transparent !important;
     color: #1AAAB2;
 }
