--- a/src/app/componentes/custom-acordion-extract/custom-acordion-extract.component.less
+++ b/src/app/componentes/custom-acordion-extract/custom-acordion-extract.component.less
@@ -35,3 +35,26 @@ mat-expansion-panel{
     border-top: 1px solid #BDBDBD;
     padding: 10px 0 0 0;
 }
+
+.content .content-info{
+    margin: 10px 0 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content p{
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+
+    .content p{
+        margin: 5px 0;
+    }
+
+    .content .content-info{
+        flex-direction: column;
+        align-items: initial;
+    }
+}
