--- a/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
+++ b/src/app/module/aplication/monthly-contribution/monthly-contribution.component.less
@@ -1,64 +1,4 @@
 
-
-.mat-expansion-panel{
-    border: 1px solid #BDBDBD;
-    border-bottom-right-radius: 10px !important;
-    border-bottom-left-radius: 10px !important;
-    border-top-right-radius: 10px !important;
-    border-top-left-radius: 10px !important;
-    box-shadow: initial;
-}
-
-.panel-header img{
-    margin-right: 5px;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.panel-header span{
-    display: inline-block;
-    vertical-align: middle;
-}
-
-mat-expansion-panel{
-    margin-bottom: 10px;
-}
-
-::ng-deep .mat-expansion-panel-header.mat-expanded{
-    height: 45px;
-}
-
-.content{
-    border-top: 1px solid #BDBDBD;
-    padding: 10px 0 0 0;
-}
-
-.content .line{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 7px;
-}
-
-.content .line span{
-    color: #464646;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17.5px;
-}
-
-.content .line b{
-    color: #464646;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17.5px;
-}
-
-.action{
-    margin: 20px 0 0 0 ;
-    text-indent: 50px;
-}
-
 .action button{
     text-transform: uppercase;
     color: #1AAAB2;
@@ -78,18 +18,8 @@ mat-expansion-panel{
 .action-contributon {
     text-align: center;
     margin: 15px 0 0 0;
-}
-
-.action-contributon button{
-    color: #fff;
-    background-color: #1AAAB2;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    border-radius: 5px;
-    border: 1px solid #1AAAB2;
-    padding: 12px 35px;
-    cursor: pointer;
+    max-width: 312px;
+    margin: 0 auto;
 }
 
 .graph{
@@ -99,38 +29,50 @@ mat-expansion-panel{
 }
 
 
-  #graph {
-    width: 200px;
-    height: 200px;
-  }
+#graph {
+    width: 250px;
+    height: 250px;
+}
   
-  .legenda {
+.legend {
+    border-bottom: 1px solid #BDBDBD;
+    padding: 0 0 10px 0;
+    margin: 0 0 15px 0;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-  }
-  
-  .item {
+    flex-direction: column;
+}
+
+.item {
     display: flex;
     align-items: center;
-    margin: 0 20px;
-  }
+    justify-content: center;
+    text-align: center;
+}
   
-  .circulo {
-    width: 20px;
-    height: 20px;
+.maker {
+    display: inline-block;
+    vertical-align: middle;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
-    margin-right: 10px;
-  }
+    margin-right: 5px;
+}
   
-  .descricao {
+.description span{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17.5px;
+    color: #464646;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.description strong{
+    font-weight: 600;
     font-size: 16px;
-  }
+    line-height: 20px;
+    color: #464646;
+}
   
 
-@media (max-width: 768px) {
-    .action{
-        text-align: center;
-        text-indent: initial;
-    }
-}
