--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -5,7 +5,7 @@
                 <img src="./assets/images/avatar.png" alt="user_avatar">
             </div>
             <div class="utils">
-                <a>
+                <a routerLink="/aplication">
                     <mat-icon class="material-symbols-outlined">
                         home
                     </mat-icon>
