login com autenticação e guard

--- a/src/app/componentes/custom-dialog/custom-dialog.component.html
+++ b/src/app/componentes/custom-dialog/custom-dialog.component.html
@@ -5,7 +5,7 @@
     </mat-icon>
 </mat-dialog-actions>
 <mat-dialog-content>
-    <mat-icon class="material-symbols-outlined">
+    <mat-icon class="material-symbols-outlined" [style.color]="data.cor">
         {{ data.icone }} 
     </mat-icon>
     <h2>{{ data.titulo }}</h2>
