--- a/src/app/componentes/custom-input-password/custom-input-password.component.html
+++ b/src/app/componentes/custom-input-password/custom-input-password.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="full-width">
     <mat-label>{{titulo}}</mat-label>
-    <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+    <input matInput [type]="hide ? 'password' : 'text'" [value]="value" (input)="onInputChange($event)">
     <mat-icon class="material-symbols-outlined" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
 </mat-form-field>
