--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -2,7 +2,11 @@
     <div class="container">
         <div class="header-content">
             <div class="avatar">
-                <img src="./assets/images/avatar.png" alt="user_avatar">
+                <button [matMenuTriggerFor]="menu"><img src="./assets/images/avatar.png" alt="user_avatar"></button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item>Perfil</button>
+                    <button mat-menu-item (click)="onLogout()">Logout</button>
+                </mat-menu>
             </div>
             <div class="utils">
                 <a routerLink="/aplication">
