--- a/src/app/componentes/header/header.component.less
+++ b/src/app/componentes/header/header.component.less
@@ -15,9 +15,25 @@
     overflow: hidden;
 }
 
+.header .header-content .avatar button{
+    padding: 0;
+    border: none;
+    cursor: pointer;
+}
+
+.header .header-content .avatar mat-menu mat-menu-item{
+    font-weight: 500;
+}
+
 .header .header-content .avatar img{
     width: 100%;
     height: auto;
+}
+
+.header .header-content .utils{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .header .header-content .utils a{
