--- a/src/app/componentes/custom-input/custom-input.component.html
+++ b/src/app/componentes/custom-input/custom-input.component.html
@@ -2,7 +2,7 @@
 
 <mat-form-field class="full-width">
     <mat-label>{{titulo}}</mat-label>
-    <input matInput type="{{tipo}}" formControlName="login">
+    <input matInput [value]="value" (input)="onInputChange($event)">
     <mat-icon class="material-symbols-outlined">
         check_circle
     </mat-icon>
