--- a/src/app/module/auth/login/login.component.less
+++ b/src/app/module/auth/login/login.component.less
@@ -49,7 +49,7 @@
 }
 
 .login .login-content .content-form .form .button-template{
-    margin: 80px 0 15px 0;
+    margin: 80px 15px 15px 15px;
 }
 
 .login .login-content .content-form .forgot-password{
@@ -94,5 +94,9 @@
 
     .login .login-content .content-partial{
         display: none;
+    }
+
+    .login .login-content .content-form .form .button-template{
+        margin: 4rem 0 1rem 0;
     }
 }
