--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -20,7 +20,7 @@
                     </mat-icon>
                 </a>
                 <a>
-                    <mat-icon class="material-symbols-outlined">
+                    <mat-icon class="material-symbols-outlined" (click)="ativarLoading()">
                         repeat
                     </mat-icon>
                 </a>
