--- a/src/app/componentes/custom-contribution-dialog/custom-contribution-dialog.component.less
+++ b/src/app/componentes/custom-contribution-dialog/custom-contribution-dialog.component.less
@@ -43,6 +43,7 @@ form {
 
   label{
     font-size: 15px;
+    color: #464646;
   }
 
   .form-group input[type="number"], .form-group input[type="text"]{
@@ -52,6 +53,11 @@ form {
     outline: none;
     height: 22px;
     padding: 3px 10px;
+    font-family: "Poppins", sans-serif; 
+  }
+
+  .form-group .radio{
+    cursor: pointer;
   }
 
   .modal-title{
