--- a/src/app/module/auth/forgot-password/forgot-password.component.html
+++ b/src/app/module/auth/forgot-password/forgot-password.component.html
@@ -15,10 +15,10 @@
                     continuar com a recuperação de senha</p>
                 </div>
                 <div class="form">
-                    <form>
-                        <app-custom-input titulo="Email ou CPF" icone="check_circle" type="text"></app-custom-input>
+                    <form [formGroup]="form">
+                        <app-custom-input titulo="Email ou CPF" icone="check_circle" formControlName="login" type="text"></app-custom-input>
                         <div class="button-template">
-                            <app-custom-button titulo="Redefinir senha" type="button" (click)="openModal($event)"></app-custom-button>
+                            <app-custom-button titulo="Redefinir senha" type="button" (click)="onSubmit($event)"></app-custom-button>
                         </div>
                     </form>
                 </div>
