--- a/src/app/componentes/loading/loading.component.less
+++ b/src/app/componentes/loading/loading.component.less
@@ -6,9 +6,13 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.4); 
+    background: rgba(0, 0, 0, 0.7); 
     display: flex;
     justify-content: center; 
     align-items: center;    
     z-index: 9999;         
+}
+
+::ng-deep .mat-progress-spinner circle{
+    stroke: #fff;
 }
