finalização do projeto, e fechamento de versão

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="avatar">
                 <mat-menu #menu="matMenu">
                     <button mat-menu-item>Perfil</button>
-                    <button mat-menu-item (click)="onLogout()">Logout</button>
+                    <button mat-menu-item (click)="onLogout()">Sair</button>
                 </mat-menu>
                 <button [matMenuTriggerFor]="menu"><img src="./assets/images/avatar.png" alt="user_avatar"></button>
             </div>
